# SOrd2025a_supervisor-python

./: .gitignore  LICENSE  README.md  ansible.cfg  deploy.yml  inventory.yml  modulefile.lua.jinja2  pyproject.toml
.github/workflows/: cicd.yaml
supervisor_python/: slurm.py  start.py
